--- a/MDK-ARM/ToothBrush/ToothBrush.build_log.htm
+++ b/MDK-ARM/ToothBrush/ToothBrush.build_log.htm
@@ -27,36 +27,56 @@ Project File Date:  10/29/2019
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 3 (build 300)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Rebuild target 'ToothBrush'
-assembling startup_stm32f103xb.s...
+compiling lib_fifo.c...
 compiling freertos.c...
-compiling stm32f1xx_hal_flash.c...
+assembling startup_stm32f103xb.s...
 compiling system_stm32f1xx.c...
-compiling main.c...
+compiling stm32f1xx_hal_flash.c...
+compiling bsp_uart.c...
+../Inc/bsp_uart.h(28): warning:  #1295-D: Deprecated declaration DBGInit - give arg types
+  void DBGInit();
+..\Src\bsp_uart.c(106): warning:  #550-D: variable "uart_task_handle" was set but never used
+  	static osThreadId uart_task_handle;
+..\Src\bsp_uart.c(19): warning:  #177-D: variable "uart1_lock" was declared but never referenced
+  static osMutexId uart1_lock;
+..\Src\bsp_uart.c(20): warning:  #177-D: variable "uart2_lock" was declared but never referenced
+  static osMutexId uart2_lock;
+..\Src\bsp_uart.c: 4 warnings, 0 errors
+compiling stm32f1xx_hal_rcc.c...
 compiling stm32f1xx_hal_msp.c...
 compiling stm32f1xx_it.c...
+compiling main.c...
+../Inc/bsp_uart.h(28): warning:  #1295-D: Deprecated declaration DBGInit - give arg types
+  void DBGInit();
+../Inc/bsp_hmc5883.h(12): warning:  #1295-D: Deprecated declaration InitHMC5883 - give arg types
+  void InitHMC5883();
+../Inc/bsp_hmc5883.h(13): warning:  #1295-D: Deprecated declaration updateHMC5883 - give arg types
+  void updateHMC5883();
+../Src/main.c(301): warning:  #177-D: variable "testArr" was declared but never referenced
+      uint8_t* testArr="12345678";
+../Src/main.c: 4 warnings, 0 errors
 compiling stm32f1xx_hal_dma.c...
-compiling stm32f1xx_hal_rcc.c...
-compiling stm32f1xx_hal_cortex.c...
 compiling stm32f1xx_hal_gpio_ex.c...
+compiling stm32f1xx_hal_rcc_ex.c...
+compiling stm32f1xx_hal_cortex.c...
 compiling stm32f1xx_hal_pwr.c...
 compiling stm32f1xx_hal_gpio.c...
-compiling stm32f1xx_hal_flash_ex.c...
-compiling stm32f1xx_hal_rcc_ex.c...
-compiling stm32f1xx_hal.c...
 compiling croutine.c...
 compiling queue.c...
+compiling stm32f1xx_hal_flash_ex.c...
 compiling list.c...
-compiling timers.c...
 compiling cmsis_os.c...
-compiling heap_4.c...
 compiling port.c...
-compiling event_groups.c...
+compiling timers.c...
+compiling heap_4.c...
 compiling tasks.c...
+compiling event_groups.c...
+compiling stm32f1xx_hal.c...
 compiling stm32f1xx_hal_uart.c...
 compiling stm32f1xx_hal_i2c.c...
 linking...
-Program Size: Code=8312 RO-data=324 RW-data=104 ZI-data=4640  
-"ToothBrush\ToothBrush.axf" - 0 Error(s), 0 Warning(s).
+Program Size: Code=13352 RO-data=356 RW-data=112 ZI-data=9520  
+"ToothBrush\ToothBrush.axf" - 0 Error(s), 8 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -74,7 +94,7 @@ Package Vendor: ARM
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:4.3.0
-Build Time Elapsed:  00:00:08
+Build Time Elapsed:  00:00:10
 </pre>
 </body>
 </html>
